TEST_PROGRAMS/VALID/05/hello_world.go
/* Hello World */

package main

func main() {
  println("Hello world!")
}
