TEST_PROGRAMS/INVALID/05/raw_string_closed_with_dquote.go
/* Raw string closed with " instead of '. */

package main

func main() {
  // Error: Raw string closed with " instead of '
  s := 'Hello world!"
}
